--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,19 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.bio-data {
-  position: absolute;
-  z-index: -1;
-}
-
 .form-group {
   margin-bottom: 15px;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 label {
